tests/snapshots/examples_fixtures/type_system__TypeSystem__HmGenericModule.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/HmGenericModule.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `TypeSystem.HmGenericModule` doesn't match file path `examples/type_system/TypeSystem/HmGenericModule.flx`.

  examples/type_system/TypeSystem/HmGenericModule.flx:1:1
  |
1 | module TypeSystem.HmGenericModule {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
